--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Roberto Rossa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "mime": "^3.0.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
